--- a/offspring/css/style.css
+++ b/offspring/css/style.css
@@ -1,3 +1,70 @@
-body{
-    background-color: black;
+html{
+    font-family: Helvetica;
+    background-color: #ddd;
+}
+
+.container{
+    background-color: #fff;
+    max-width: 1100px;
+    padding: 20px 50px;
+    margin: 50px auto;
+    position: relative;
+}
+
+.bold{
+    font-weight: bold;
+}
+
+.header{
+    text-align: center;
+}
+
+.main-title{
+    font-size: 40px;
+}
+
+.main-paragraph{
+    font-style: italic;
+}
+
+.feature-image{
+    text-align: center;
+    margin-top: 30px;
+}
+
+.biography-container{
+    padding: 25px 0;
+    border-top: 1px dashed #ddd;
+    border-bottom: 1px dashed #ddd;
+}
+
+.quotes-container{
+    background-color: #ddd;
+    padding: 30px;
+    margin-top: 30px;
+}
+
+.quotes-container blockquote{
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.quotes-container p{
+    font-style: italic;
+}
+
+.curiosidades-container{
+    padding: 25px 0;
+    margin: 25px 0;
+    border-top: 1px dashed #ddd;
+    border-bottom: 1px dashed #ddd;
+}
+
+.curiosidades-container li{
+    height: 30px; 
+}
+
+.img-bold{
+    font-weight: bold;
+    text-align: center;
 }
